# cosmos-transfer1

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  ATTRIBUTIONS.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  cosmos-transfer1.yaml  how_to_run.txt  pyproject.toml  requirements.txt  requirements_docker.txt  training.sh  training_4node.sh
assets/: inference_cosmos_transfer1_multi_control.json  inference_cosmos_transfer1_single_control_depth.json  inference_cosmos_transfer1_single_control_depth_short_prompt.json  inference_cosmos_transfer1_single_control_edge.json  inference_cosmos_transfer1_single_control_edge_short_prompt.json  inference_cosmos_transfer1_single_control_keypoint.json  inference_cosmos_transfer1_single_control_regional_prompt.json  inference_cosmos_transfer1_single_control_regional_prompt_left_blue.json  inference_cosmos_transfer1_single_control_regional_prompt_right_blue.json  inference_cosmos_transfer1_single_control_seg.json  inference_cosmos_transfer1_single_control_seg_short_prompt.json  inference_cosmos_transfer1_single_control_segment_regional_prompt.json  inference_cosmos_transfer1_single_control_vis.json  inference_cosmos_transfer1_single_control_vis_short_prompt.json  inference_cosmos_transfer1_spatiotemporal_weights_auto.json  inference_cosmos_transfer1_uniform_weights.json  inference_cosmos_transfer1_uniform_weights_auto.json  inference_upscaler.json  robot_sample_spec.json  sample_av_hdmap_multiview_lvg_spec.json  sample_av_hdmap_multiview_lvg_waymo_spec.json  sample_av_hdmap_multiview_spec.json  sample_av_hdmap_multiview_waymo_spec.json  sample_av_hdmap_spec.json  sample_av_lidar_multiview_lvg_spec.json  sample_av_lidar_multiview_spec.json
checkpoints/: README.md
cosmos_transfer1/: POST_TRAINING.md  checkpoints.py
examples/: inference_cosmos_transfer1_7b.md  inference_cosmos_transfer1_7b_4kupscaler.md  inference_cosmos_transfer1_7b_depth.md  inference_cosmos_transfer1_7b_regionwise_prompt.md  training_cosmos_transfer_7b.md  (+7 more)
(+277 files in other folders)
